# The-Lords-Of-Midnight

./: .gitignore  README.md
main/midnight/: .axproj  .axproj.json  .cocos-project.json  CMakeLists.txt  SimpleShader.cpp  cocos_CMakeLists.txt  ddr_history.txt  ddr_v2.0_osx.cfg  ddr_v2.0_win.cfg  lom_history.txt  lom_v2.0_osx.cfg  lom_v2.0_win.cfg  osx_builds_ddr.sh  osx_builds_lom.sh  tme_history.txt
main/midnight/Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  LandscapeScene.cpp  LandscapeScene.h  LandscapeTestScene.cpp  TMEMapBuilder.cpp  cocos.h  tme.cpp  tme_interface.h
main/midnight/Classes/Extensions/: ScrollView.cpp  ScrollView.h  TMXTiledMap.h
main/midnight/Classes/Utils/: TiledMapper.cpp  TiledMapper.h  mapbuilder.cpp  mapbuilder.h
main/midnight/Classes/frontend/: choose_id.h  help_id.h  keyboard_id.h  language.h  layout_id.h  panel_id.h  resolutionmanager.cpp  resolutionmanager.h
main/midnight/Classes/landscaping/: ILandscape.cpp  ILandscape.h  LandscapeColour.cpp  LandscapeColour.h  LandscapeDebug.cpp  LandscapeDebug.h  LandscapeGenerator.cpp  LandscapeGenerator.h  LandscapeLand.cpp  LandscapeLand.h  LandscapeNode.cpp  LandscapeNode.h  LandscapePeople.cpp  LandscapePeople.h  LandscapeSky.cpp  LandscapeSky.h  LandscapeTerrain.cpp  LandscapeTerrain.h  LandscapeView.cpp  LandscapeView.h  TunnelView.cpp
main/midnight/Classes/models/: mapmodel.cpp  mapmodel.h  panelmodel.h  selectmodel.cpp  selectmodel.h
main/midnight/Classes/panels/: CreditsScene.cpp  CreditsScene.h  DefaultScene.cpp  DefaultScene.h  MainMenuScene.cpp  MainMenuScene.h  OptionsScene.cpp  OptionsScene.h  SplashScene.cpp  SplashScene.h  panel_advert.cpp  panel_advert.h  panel_credits.cpp  panel_credits.h  panel_dedication.cpp  panel_dedication.h  panel_gameover.cpp  panel_gameover.h  panel_look.cpp  panel_look.h  panel_mainmenu.cpp  panel_mainmenu.h  panel_map.cpp  panel_map.h  panel_map_detailed.cpp  panel_map_detailed.h  panel_map_overview.cpp  panel_map_overview.h  panel_night.cpp  panel_night.h  panel_options.cpp  panel_options.h  panel_select.cpp  panel_select.h  panel_splashscreen.cpp  panel_splashscreen.h  panel_think.cpp  panel_think.h  uipanel.cpp  uipanel.h  (+2 more)
main/midnight/Classes/system/: config.cpp  config.h  configmanager.cpp  configmanager.h  help_ddr.cpp  help_lom.cpp  helpmanager.cpp  helpmanager.h  keyboardmanager.cpp  keyboardmanager.h  moonring.cpp  moonring.h  panelmanager.cpp  panelmanager.h  progressmonitor.cpp  progressmonitor.h  projectconfig.cpp  projectconfig.h  resolutionmanager.cpp  resolutionmanager.h  ringcontroller.cpp  ringcontroller.h  settingsmanager.cpp  settingsmanager.h  storymanager.cpp  storymanager.h  tmemanager.cpp  tmemanager.h
main/midnight/Classes/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.h  tinyxmlparser.cpp
main/midnight/Classes/ui/: MyButton.cpp  MyButton.h  uibook.cpp  uibook.h  uibookmenu.cpp  uibookmenu.h  uicommandwindow.cpp  uicommandwindow.h  uielement.cpp  uielement.h  uieventargs.h  uifilterbutton.cpp  uifilterbutton.h  uihelper.cpp  uihelper.h  uihelpwindow.cpp  uihelpwindow.h  uioptionitem.cpp  uioptionitem.h  uipanel.cpp  uipanel.h  uipopup.cpp  uipopup.h  uishortcutkeys.cpp  uishortcutkeys.h  uitextmenu.cpp  uitextmenu.h  uitextmenuitem.h  uithinkpage.cpp  uithinkpage.h
main/midnight/History/: tme_history.txt
main/midnight/Resources/: citadel_wip.tmx  lom_map.tmx  lom_map_test.tmx
main/midnight/Resources-midnight/lom/: database  lom.tme
main/midnight/Resources-revenge/ddr/: ddr.tme
main/midnight/Resources/ddr/: database  ddr.tme
main/midnight/Resources/lom/: lom.tme
main/midnight/Resources/shaders/: characterTimeShader.fsh  terrainTimeShader.fsh
main/midnight/Resources/terrain/: citadel_M-0.plist  dayNight.fsh  lom_L-0.plist  lom_L-1.plist  terrainTimeShader.fsh
main/midnight/Source/: AppDelegate.cpp  AppDelegate.h  axmol_sdk.h  cocos.h
main/midnight/Source/extensions/: CMakeLists.txt  CustomDirector.h  ScrollView.cpp  ScrollView.h  TMXTiledMap.cpp  TMXTiledMap.h
main/midnight/Source/frontend/: CMakeLists.txt  choose_id.h  help_id.h  keyboard_id.h  language.h  layout_id.h  panel_id.h  version_check.h
main/midnight/Source/landscaping/: CMakeLists.txt  ILandscape.cpp  ILandscape.h  LandscapeColour.cpp  LandscapeColour.h  LandscapeDebug.cpp  LandscapeDebug.h  LandscapeGenerator.cpp  LandscapeGenerator.h  LandscapeLand.cpp  LandscapeLand.h  LandscapeNode.cpp  LandscapeNode.h  LandscapePeople.cpp  LandscapePeople.h  LandscapeSky.cpp  LandscapeSky.h  LandscapeTerrain.cpp  LandscapeTerrain.h  LandscapeView.cpp  LandscapeView.h  TunnelView.cpp  TunnelView.h
main/midnight/Source/models/: CMakeLists.txt  mapmodel.cpp  mapmodel.h  panelmodel.cpp  panelmodel.h  selectmodel.cpp  selectmodel.h
main/midnight/Source/panels/: CMakeLists.txt  panel_advert.cpp  panel_advert.h  panel_credits.cpp  panel_credits.h  panel_dedication.cpp  panel_dedication.h  panel_gameover.cpp  panel_gameover.h  panel_look.cpp  panel_look.h  panel_mainmenu.cpp  panel_mainmenu.h  panel_map_detailed.cpp  panel_map_detailed.h  panel_map_overview.cpp  (+11 more)
main/midnight/build.win32/: .gitignore
main/midnight/config/: lom_v2.0_osx.cfg  lom_v2.0_win.cfg
main/midnight/history/: ddr_history.txt  tme_history.txt
main/midnight/proj.android/: .project  gradle.properties  settings.gradle
main/midnight/proj.android-studio/: settings.gradle
main/midnight/proj.android_lom/: gradle.properties
main/midnight/proj.android_midnight/: build.gradle  settings.gradle
main/midnight/proj.android_revenge/: gradle.properties  settings.gradle
main/midnight/proj.win10/: citadel.sln
main/midnight/proj.win32/: .gitignore  Classes  RCa03444  citadel.vcxproj  game.aps  game.rc  main.cpp  midnight.rc  midnight.sln  midnight.vcxproj  midnight.vcxproj.filters  resource.h  revenge.rc
main/midnight/scripts/: osx_builds_ddr.sh  osx_builds_lom.sh
main/midnight/src/: AppDelegate.cpp  cocos.h
main/midnight/tests/: CMakeLists.txt  map_steps.cpp  map_steps.h  mocks.cpp  mocks.h  moonring_tests.cpp  test.cpp  tme_steps.cpp  tme_steps.h  ui_steps.cpp  ui_steps.h
(+935 files in other folders)
